yay overflow is fixed

--- a/final/css/buildstylesheet.css
+++ b/final/css/buildstylesheet.css
@@ -349,13 +349,6 @@
 
  }
 
- .arrow {
-   width:20px;
- }
-
- .arrow:hover {
-   opacity: 30%;
- }
 
  .m-close:hover {
    opacity: 70%;
@@ -370,6 +363,7 @@
   border-radius: 5px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+
 
 .controls-container:after {
   content: '';
@@ -450,17 +444,17 @@
       transform: translate(10px, 0); }
     .wrapper.active .arrow:after {
       transform: rotate(90deg) translate(10px, 0); }
-  .wrapper.active ul {
+  .wrapper.active div.hide {
     opacity: 1;
-    height: 150px; }
+    height: 120px; }
 
-.wrapper2 ul {
+.wrapper2 div.hide {
   border: 1px solid rgba(255, 255, 255, 0.5); }
 
-.wrapper2 li:first-child {
+.wrapper2 div.hide:first-child {
   margin-top: 16px; }
 
-.wrapper2 li:last-child {
+.wrapper2 div.hide:last-child {
   margin-bottom: 3px; }
 
 
@@ -470,32 +464,10 @@
     transform: translate(10px, 0); }
   .wrapper2.active .arrow:after {
     transform: rotate(90deg) translate(10px, 0); }
+    .wrapper2.active div.hide {
+      opacity: 1;
+      height: 180px; }
 
-.wrapper3 .arrow {
-  transform: rotate(0);
-  left: 0; }
-  .wrapper3 .arrow:before, .wrapper3 .arrow:after {
-    background-color: transparent;
-    width: 3px;
-    height: 10px;
-    display: inline-block;
-    position: absolute;
-    border-bottom: 12px solid black;
-    top: 0;
-    left: 0;
-    transform: rotate(0); }
-  .wrapper3 .arrow:before {
-    transform: rotate(-135deg); }
-  .wrapper3 .arrow:after {
-    transform: rotate(135deg); }
-
-.wrapper3.active .arrow {
-  transform: rotate(0);
-  transform: translate(0, -6px); }
-  .wrapper3.active .arrow:before {
-    transform: rotate(-45deg); }
-  .wrapper3.active .arrow:after {
-    transform: rotate(45deg); }
 
 .arrow {
   width: 13px;
@@ -526,28 +498,28 @@
   display: block;
   text-align: left;
   padding: 15px 12px 16px;
-  margin: 0;
+  margin: 1rem 0 0 0;
   cursor: pointer;
   border-bottom: 1px solid grey;
   transition: 0.15s ease; }
 
-  ul.hide {
+  div.hide {
     padding: 0;
     margin: 0;
     height: 0;
+    line-height: 0;
     opacity: 0;
-    transition: 0.4s ease; }
-  
-  li.hide {
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 4px 0;
-    text-align: left;
-    cursor: pointer; }
+    transition: 0.4s ease;
+    cursor: pointer;
+    overflow: hidden; }
 
     img.review {
       width:100%;
       padding: 1rem .5rem 0;
+    }
+
+    .click-text:hover{
+      opacity: 60%;
     }
 
 
